--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,24 @@
-APScheduler==3.7.0
-asgiref==3.3.1
+APScheduler==3.8.0
+asgiref==3.4.1
+backports.zoneinfo==0.2.1
 cdifflib==1.2.5
-certifi==2020.12.5
+certifi==2021.5.30
 chardet==4.0.0
+charset-normalizer==2.0.6
 csscompressor==0.9.5
 dicttoxml==1.7.4
-Django==3.1.7
-django-apscheduler==0.5.2
-idna==3.1
-lark-parser==0.11.2
+Django==3.2.7
+django-apscheduler==0.6.0
+idna==3.2
+lark-parser==0.12.0
 ply==3.11
-Pygments==2.8.1
-python-dateutil==2.8.1
-pytz==2021.1
-requests==2.25.1
+Pygments==2.10.0
+python-dateutil==2.8.2
+pytz==2021.3
+requests==2.26.0
 rjsmin==1.1.0
-six==1.15.0
+six==1.16.0
 slimit==0.8.1
-sqlparse==0.4.1
+sqlparse==0.4.2
 tzlocal==2.1
-urllib3==1.26.4
+urllib3==1.26.7
