--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,26 @@
-APScheduler==3.8.0
-asgiref==3.4.1
+APScheduler==3.9.1.post1
+asgiref==3.5.2
 backports.zoneinfo==0.2.1
-cdifflib==1.2.5
-certifi==2021.5.30
-chardet==4.0.0
-charset-normalizer==2.0.6
+cdifflib==1.2.6
+certifi==2022.9.24
+chardet==5.1.0
+charset-normalizer==3.0.1
 csscompressor==0.9.5
-dicttoxml==1.7.4
-Django==3.2.7
-django-apscheduler==0.6.0
-idna==3.2
+dicttoxml==1.7.15
+Django==4.1.3
+django-apscheduler==0.6.2
+idna==3.4
 lark-parser==0.12.0
 ply==3.11
-Pygments==2.10.0
+Pygments==2.13.0
 python-dateutil==2.8.2
-pytz==2021.3
-requests==2.26.0
-rjsmin==1.1.0
+pytz==2022.6
+pytz-deprecation-shim==0.1.0.post0
+requests==2.28.1
+rjsmin==1.2.1
 six==1.16.0
 slimit==0.8.1
-sqlparse==0.4.2
-tzlocal==2.1
-urllib3==1.26.7
+sqlparse==0.4.3
+tzdata==2022.7
+tzlocal==4.2
+urllib3==1.26.13
